fix: text wrapping

--- a/src/pages/result-page/result-page.module.less
+++ b/src/pages/result-page/result-page.module.less
@@ -1,4 +1,5 @@
-.card {
+.default,
+.fail {
     position: relative;
     z-index: 5;
     width: 540px;
@@ -26,11 +27,34 @@
             }
         }
 
+        .ant-result-subtitle {
+            max-width: 368px;
+            margin: 0 auto;
+        }
+
         .ant-result,
         .ant-result-title,
         .ant-result-subtitle,
         .ant-result-extra {
             line-height: @line-height-base;
+        }
+    }
+}
+
+.fail {
+    :global {
+        .ant-result {
+            width: 475px;
+            margin: 0 auto;
+            padding: 0;
+
+            @media (max-width: 575px) {
+                width: 296px;
+            }
+        }
+
+        .ant-result-subtitle {
+            max-width: 100%;
         }
     }
 }
